fixed ingredients with too long names behaving oddly

--- a/src/components/Pantry/Pantry.css
+++ b/src/components/Pantry/Pantry.css
@@ -81,7 +81,8 @@
     margin: 1vh;
     margin-top: 1.5vh;
     height: 5vh;
-    padding-top: .8vh;
+    overflow: scroll;
+    white-space: nowrap;
 }
 
 .Pantry_list li label {
